--- a/index.html
+++ b/index.html
@@ -39,17 +39,17 @@
         <h2>Exemples de créations</h2>
         <div class="gallery">
             <div class="card">
-                <img src="imgs/hibou.png" alt="Tatouage hibou" />
+                <img src="hibou.png" alt="Tatouage hibou" />
                 <p class="keywords">hibou · sagesse · minimaliste</p>
                 <p class="description">Symbole de clairvoyance et de connaissance intérieure.</p>
             </div>
             <div class="card">
-                <img src="imgs/boussole.png" alt="Tatouage boussole" />
+                <img src="boussole.png" alt="Tatouage boussole" />
                 <p class="keywords">boussole · montagnes · aventure</p>
                 <p class="description">Représente la recherche de direction et le goût de l’exploration.</p>
             </div>
             <div class="card">
-                <img src="imgs/oldschool.png" alt="Tatouage old school serpent et dague" />
+                <img src="oldschool.png" alt="Tatouage old school serpent et dague" />
                 <p class="keywords">serpent · dague · old school</p>
                 <p class="description">Symbole de défense, de transformation et de puissance cachée. Inspiré du style traditionnel américain.</p>
             </div>
