--- a/mentions-legales.html
+++ b/mentions-legales.html
@@ -10,15 +10,15 @@
       padding: 40px;
       max-width: 800px;
       margin: auto;
-      background-color: #fdfdfd;
-      color: #333;
+      background-color: black;
+      color: white;
     }
     h1 {
-      color: #6c4df4;
+      color: Green;
       margin-bottom: 30px;
     }
     a {
-      color: #6c4df4;
+      color: green;
       text-decoration: none;
     }
     a:hover {
