--- a/cgv.html
+++ b/cgv.html
@@ -10,18 +10,18 @@
       padding: 40px;
       max-width: 800px;
       margin: auto;
-      background-color: #fdfdfd;
-      color: #333;
+      background-color: black;
+      color: white;
     }
     h1 {
-      color: #6c4df4;
+      color: green;
       margin-bottom: 30px;
     }
     h2 {
       margin-top: 30px;
     }
     a {
-      color: #6c4df4;
+      color: green;
       text-decoration: none;
     }
     a:hover {
