--- a/merci.html
+++ b/merci.html
@@ -10,24 +10,24 @@
     body {
       margin: 0;
       font-family: 'Poppins', sans-serif;
-      background-color: #fdfdfd;
+      background-color: black;
     }
 
     .confirmation {
       text-align: center;
       padding: 100px 20px;
-      background-color: #ffffff;
+      background-color: black;
     }
 
     .confirmation h1 {
       font-size: 32px;
-      color: #6c4df4;
+      color: green;
       margin-bottom: 20px;
     }
 
     .confirmation p {
       font-size: 18px;
-      color: #333;
+      color: white;
       margin-bottom: 10px;
     }
 
@@ -35,8 +35,8 @@
       display: inline-block;
       margin-top: 30px;
       padding: 15px 30px;
-      background-color: #6c4df4;
-      color: #ffffff;
+      background-color: green;
+      color: white;
       font-size: 16px;
       font-weight: bold;
       border-radius: 8px;
@@ -46,8 +46,14 @@
     }
 
     .cta-button:hover {
-      background-color: #523ad9;
+      background-color: green;
     }
+
+  .confirmation a {
+    color: white;
+  }
+
+
   </style>
 </head>
 <body>
@@ -62,3 +68,4 @@
 
 </body>
 </html>
+
