--- a/index.html
+++ b/index.html
@@ -2,11 +2,12 @@
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
-    <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
-    <link rel="icon" type="image/png" href="favicon.png">
-    <meta name="theme-color" content="#000000">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equive="X-UA-Compatible" content="IE=edge">
+    <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
+    <link rel="manifest" href="manifest.json">
+    <meta name="theme-color" content="#000000">
+    <link rel="icon" type="image/png" href="favicon.png">
     <title>MyInkBrain</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
@@ -42,17 +43,17 @@
         <h2>Exemples de créations</h2>
         <div class="gallery">
             <div class="card">
-                <img src="hibou.png" alt="Tatouage hibou" />
+                <img src="imgs/hibou.png" alt="Tatouage hibou" />
                 <p class="keywords">hibou · sagesse · minimaliste</p>
                 <p class="description">Symbole de clairvoyance et de connaissance intérieure.</p>
             </div>
             <div class="card">
-                <img src="boussole.png" alt="Tatouage boussole" />
+                <img src="imgs/boussole.png" alt="Tatouage boussole" />
                 <p class="keywords">boussole · montagnes · aventure</p>
                 <p class="description">Représente la recherche de direction et le goût de l’exploration.</p>
             </div>
             <div class="card">
-                <img src="oldschool.png" alt="Tatouage old school serpent et dague" />
+                <img src="imgs/oldschool.png" alt="Tatouage old school serpent et dague" />
                 <p class="keywords">serpent · dague · old school</p>
                 <p class="description">Symbole de défense, de transformation et de puissance cachée. Inspiré du style traditionnel américain.</p>
             </div>
@@ -179,6 +180,14 @@
       btn.onclick = () => {
         window.scrollTo({ top: 0, behavior: "smooth" });
       };
-    </script>  
+    </script> 
+    <script>
+        if ('serviceWorker' in navigator) {
+                navigator.serviceWorker.register('/service-worker.js')
+            .then(() => console.log('Service Worker enregistré ✅'))
+            .catch(err => console.error('Service Worker échec ❌', err));
+        }
+    </script>
+ 
 </body>
 </html>
