--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
     </footer>  
 <!-- FOOTER -->
 
-    <script src="script.js"></script>
+    <!-- <script src="script.js"></script> -->
     
     <button id="backToTop" title="Retour en haut">↑</button>
     <script>
