--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <header class="top-nav">
         <nav>
           <a href="/">Accueil</a>
-          <a href="mailto:support@myinkbrain.com">Contact</a>
+          <a href="mailto:contact@myinkbrain.fr">Contact</a>
         </nav>
       </header>
       
@@ -154,7 +154,7 @@
       
         <div class="question">
             <h3>📧 Je n’ai pas reçu mon email, que faire ?</h3>
-            <p>Merci de vérifier votre dossier de courriers indésirables. Si vous ne trouvez rien après 2 heures, contactez-nous à <a href="mailto:support@myinkbrain.com">support@myinkbrain.com</a>, nous vous répondrons sous 48 heures.</p>
+            <p>Merci de vérifier votre dossier de courriers indésirables. Si vous ne trouvez rien après 2 heures, contactez-nous à <a href="mailto:contact@myinkbrain.fr">contact@myinkbrain.fr</a>, nous vous répondrons sous 48 heures.</p>
         </div>
     </section>
 <!-- FAQ -->
