--- a/mentions-legales.html
+++ b/mentions-legales.html
@@ -39,7 +39,7 @@
     POTEL Society – Micro-entreprise<br>
     SIRET : En cours d'immatriculation<br>
     Adresse : 5 rue du limousin, Epernay, France<br>
-    Email : <a href="mailto:support@myinkbrain.com">support@myinkbrain.com</a>
+    Email : <a href="mailto:contact@myinkbrain.fr">support@myinkbrain.com</a>
   </p>
 
   <h2>Hébergeur</h2>
