--- a/cgv.html
+++ b/cgv.html
@@ -58,7 +58,7 @@
   <p>Les créations ont une finalité artistique. Le client est seul responsable de l’usage qu’il en fait, notamment en cas de tatouage définitif.</p>
 
   <h2>Article 8 – Contact</h2>
-  <p>Pour toute question, contactez-nous à <a href="mailto:support@myinkbrain.com">support@myinkbrain.com</a>.</p>
+  <p>Pour toute question, contactez-nous à <a href="mailto:contact@myinkbrain.fr">support@myinkbrain.com</a>.</p>
 
   <a class="back" href="/">← Retour à l'accueil</a>
 </body>
