--- a/merci.html
+++ b/merci.html
@@ -62,7 +62,7 @@
     <h1>Merci pour votre commande 🖤</h1>
     <p>Votre idée de tatouage est en cours de création.</p>
     <p>Vous recevrez un email personnalisé sous 30 minutes.</p>
-    <p>Une question ? Contactez-nous à <a href="mailto:support@myinkbrain.com">support@myinkbrain.com</a></p>
+    <p>Une question ? Contactez-nous à <a href="mailto:contact@myinkbrain.fr">contact@myinkbrain.fr</a></p>
     <a href="/" class="cta-button">Retour à l’accueil</a>
   </section>
 
