--- a/confidentialite.html
+++ b/confidentialite.html
@@ -46,7 +46,7 @@
   <p>Les données sont conservées pendant 12 mois, sauf demande de suppression par le client.</p>
 
   <h2>Droit d’accès, de rectification ou de suppression</h2>
-  <p>Conformément au RGPD, vous pouvez exercer vos droits à tout moment en écrivant à <a href="mailto:contact@myinkbrain.fr">support@myinkbrain.com</a>.</p>
+  <p>Conformément au RGPD, vous pouvez exercer vos droits à tout moment en écrivant à <a href="mailto:contact@myinkbrain.fr">contact@myinkbrain.fr</a>.</p>
 
   <a class="back" href="/">← Retour à l'accueil</a>
 </body>
